benchmarking.md - show tomcat status